@@ -40,9 +40,10 @@ static void signal_handler(int signo){
   /* fprintf() is not reentrant, but we _exit() anyway */
   fprintf(stderr,
     "\n\n"
-    "Signal %d caught by ps (%s).\n"
-    "Please send bug reports to <acahalan@cs.uml.edu>\n",
+    "Signal %d (%s) caught by ps (%s).\n"
+    "Please send bug reports to <feedback@lists.sf.net> or <albert@users.sf.net>\n",
     signo,
+    signal_number_to_name(signo),
     procps_version
   );
   _exit(signo+128);
